Remove unused CSS and Bootstrap library files.
Deleted obsolete `app.css` and Bootstrap v5.3.3 files to clean up unused assets from the project. This reduces unnecessary bloat and ensures only relevant files are maintained.

--- a/src/web/CastAmNow.Web/CastAmNow.Web/Components/App.razor
+++ b/src/web/CastAmNow.Web/CastAmNow.Web/Components/App.razor
@@ -5,16 +5,17 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="/" />
-    <link rel="stylesheet" href="@Assets["lib/bootstrap/dist/css/bootstrap.min.css"]" />
-    <link rel="stylesheet" href="@Assets["app.css"]" />
-    <link rel="stylesheet" href="@Assets["CastAmNow.Web.styles.css"]" />
+    <link rel="stylesheet" href="_content/CastAmNow.UI/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="_content/CastAmNow.UI/app.css" />
+    <link rel="stylesheet" href="_content/CastAmNow.UI/CastAmNow.UI.bundle.scp.css" />
     <ImportMap />
-    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="icon" type="image/png" href="_content/CastAmNow.UI/favicon.png" />
     <HeadOutlet />
+    <title>Cast Am Now</title>
 </head>
 
 <body>
-    <Routes />
+    <CastAmNow.UI.Routes />
     <script src="_framework/blazor.web.js"></script>
 </body>
 
