--- a/src/web/CastAmNow.Web/CastAmNow.Web/Components/_Imports.razor
+++ b/src/web/CastAmNow.Web/CastAmNow.Web/Components/_Imports.razor
@@ -8,4 +8,7 @@
 @using Microsoft.JSInterop
 @using CastAmNow.Web
 @using CastAmNow.Web.Client
+@using CastAmNow.UI
+@using CastAmNow.UI.Layout
+@using CastAmNow.UI.Pages
 @using CastAmNow.Web.Components
