Refactor Counter component and update service registrations for WebAssembly mode

--- a/src/web/CastAmNow.Web/CastAmNow.Web/Components/App.razor
+++ b/src/web/CastAmNow.Web/CastAmNow.Web/Components/App.razor
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <CastAmNow.UI.Routes />
+    <CastAmNow.UI.Routes @rendermode="@RenderMode.InteractiveWebAssembly" />
     <script src="_framework/blazor.web.js"></script>
 </body>
 
