--- a/src/ui/CastAmNow.UI/Pages/Weather.razor
+++ b/src/ui/CastAmNow.UI/Pages/Weather.razor
@@ -1,5 +1,5 @@
 ﻿@page "/weather"
-
+@inject IDefectApi DefectApi
 <PageTitle>Weather</PageTitle>
 
 <h1>Weather</h1>
@@ -42,7 +42,7 @@ else
     {
         // Simulate asynchronous loading to demonstrate a loading indicator
         await Task.Delay(500);
-
+        var defect = await DefectApi.DefectService.GetDefectAsync();
         var startDate = DateOnly.FromDateTime(DateTime.Now);
         var summaries = new[] { "Freezing", "Bracing", "Chilly", "Cool", "Mild", "Warm", "Balmy", "Hot", "Sweltering", "Scorching" };
         forecasts = Enumerable.Range(1, 5).Select(index => new WeatherForecast
