--- a/src/ui/CastAmNow.UI/_Imports.razor
+++ b/src/ui/CastAmNow.UI/_Imports.razor
@@ -7,3 +7,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using Microsoft.AspNetCore.Components
+@using CastAmNow.Sdk
+
