--- a/src/web/CastAmNow.Web/CastAmNow.Web/Components/App.razor
+++ b/src/web/CastAmNow.Web/CastAmNow.Web/Components/App.razor
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="_content/CastAmNow.UI/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="_content/CastAmNow.UI/app.css" />
     <link rel="stylesheet" href="_content/CastAmNow.UI/CastAmNow.UI.bundle.scp.css" />
+    <link rel="stylesheet" href="_content/Blazored.Modal/blazored-modal.css" />
     <ImportMap />
     <link rel="icon" type="image/png" href="_content/CastAmNow.UI/favicon.png" />
     <HeadOutlet />
