--- a/src/ui/CastAmNow.UI/_Imports.razor
+++ b/src/ui/CastAmNow.UI/_Imports.razor
@@ -10,3 +10,5 @@
 @using Blazored.Modal
 @using Blazored.Modal.Services
 @using CastAmNow.Sdk
+@using CastAmNow.UI.Services
+@inject ICastedService CastedService
