--- a/src/ui/CastAmNow.UI/Pages/Home.razor
+++ b/src/ui/CastAmNow.UI/Pages/Home.razor
@@ -1,14 +1,13 @@
 ﻿@page "/OldHome"
-@using CastAmNow.UI.Services
 @inject IFormFactor FormFactor
 
 <PageTitle>Home</PageTitle>
 
 <h1>Hello, world!</h1>
 
-Welcome to your new app running on <em>@factor</em> using <em>@platform</em>.
+Welcome to your new app running on <em>@Factor</em> using <em>@Platform</em>.
 
 @code {
-    private string factor => FormFactor.GetFormFactor();
-    private string platform => FormFactor.GetPlatform();
+    private string Factor => FormFactor.GetFormFactor();
+    private string Platform => FormFactor.GetPlatform();
 }
